changed inject from `async` to `defer` which will never block rendering of the page according to https://addyosmani.com/blog/script-priorities/
Also moved the injection from `</body>` to `<head>` so that the browser can start downloading the script in the background

--- a/src/Resources/views/Tag/library.html.twig
+++ b/src/Resources/views/Tag/library.html.twig
@@ -1,1 +1,1 @@
-<script src="https://d1pna5l3xsntoj.cloudfront.net/scripts/company/awAddGift.js#{{ partner_id }}" async></script>
+<script src="https://d1pna5l3xsntoj.cloudfront.net/scripts/company/awAddGift.js#{{ partner_id }}" defer></script>
